# quantbacktest

./: .gitignore  2.0  CHANGELOG.md  README.md  pyproject.toml  test.bat
.github/workflows/: ci.yml
docs/: architecture.md  ci.md  data.md  examples.md  index.md  metrics.md  quickstart.md  strategies.md
examples/: README.md  aapl_momentum_strategy.py  grid_search_example.py  mean_reversion_strategy.py  quickstart_example.py  walk_forward_example.py
quantbacktest/quantbacktest/: __init__.py
quantbacktest/quantbacktest/core/: __init__.py  events.py  execution.py  queue.py
quantbacktest/quantbacktest/data/: __init__.py  cache.py  errors.py  manager.py  settings.py  validator.py
quantbacktest/quantbacktest/data/providers/: __init__.py  base.py  local_csv.py  yahoo.py
quantbacktest/quantbacktest/engine/: __init__.py  base.py  context.py  demo.py  modes.py  scheduler.py
quantbacktest/quantbacktest/metrics/: __init__.py  analyzer.py  base.py  cli.py  ratios.py  report.py  timeseries.py
quantbacktest/quantbacktest/portfolio/: __init__.py  state.py
quantbacktest/quantbacktest/strategy/: __init__.py  base.py  context.py  indicators.py  mean_reversion.py  momentum.py  registry.py
quantbacktest/quantbacktest/utils/: __init__.py  config.py  harness.py  logging.py  paths.py  profiling.py  random.py
scripts/: generate_synthetic_data.py
tests/: test_aapl_momentum.py  test_data_layer.py  test_docs.py  test_engine_core.py  test_execution.py  test_mean_reversion.py  test_metrics_cli.py  test_metrics_report.py  test_package_structure.py  test_portfolio_accounting.py  test_strategy_api.py  test_strategy_indicators.py  test_strategy_registry.py  test_yahoo_provider.py
tests/data/: synthetic_aapl.csv
